@@ -2066,6 +2066,14 @@ nsh>
     <th align="left">Description</th>
   </tr>
   <tr>
+    <td valign="top"><b><code>CONFIG_NSH_BUILTIN_APPS</code></b></td>
+    <td>
+      Support external registered, &quot;named&quot; applications that can be
+      executed from the NSH command line (see apps/README.txt for
+      more information).
+    </td>
+  </tr>
+  <tr>
     <td valign="top"><b><code>CONFIG_NSH_FILEIOSIZE</code></b></td>
     <td>
       Size of a static I/O buffer used for file access (ignored if
